--- a/src/components/pages/Main/index.module.css
+++ b/src/components/pages/Main/index.module.css
@@ -83,6 +83,7 @@
     display: flex;
     flex-direction: row;
     gap: 20px;
+    margin-bottom: 120px;
 }
 .Part3Left{
     width: 380px;
@@ -101,4 +102,16 @@
     height: 383px;
     background: url(../../../assets/img/prepod.webp) no-repeat;
     background-size: cover;
+}
+.Part3RightItem2{
+    height: 383px;
+    width: 100%;
+    padding: 100px;
+}
+
+.Part4{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    position: relative;
 }
