--- a/src/components/pages/NotFound/index.module.css
+++ b/src/components/pages/NotFound/index.module.css
@@ -1,7 +1,7 @@
 .Text{
     width: 100%;
     margin-top: 75px;
-    font-family: "Ubuntu", sans-serif;;
+    font-family: "Ubuntu", sans-serif;
     font-weight: 700;
     font-size: 64px;
     color: #00AEEF;
