--- a/src/components/Footer/index.module.css
+++ b/src/components/Footer/index.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 24.4rem;
     background: url("../../assets/img/plashka.webp"), no-repeat;
+    background-size: cover;
     z-index: 6;
     display: flex;
     flex-direction: column;
