--- a/src/components/HeaderDropMenu/index.module.css
+++ b/src/components/HeaderDropMenu/index.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     position: absolute;
     top: calc(100% + 10px);
+    z-index: 5;
 }
 .wrapper::after{
     content: '';
