--- a/src/components/pages/NotFound/index.module.css
+++ b/src/components/pages/NotFound/index.module.css
@@ -1,10 +1,25 @@
-.Text{
-    width: 100%;
-    margin-top: 75px;
+.E404Container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin-top: 120px;
+}
+.E404{
     font-family: "Ubuntu", sans-serif;
     font-weight: 700;
-    font-size: 64px;
-    color: #00AEEF;
-    display: flex;
-    justify-content: center;
+    font-size: 128px;
+    color: #01437C;
+}
+.E404Text{
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
+    font-size: 32px;
+    color: #01437C;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #01437C;
+}
+.Button{
+    width: 386px;
+    height: 74px;
 }
