--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,26 @@ body {
 html {
     scroll-behavior: smooth;
 }
+::-webkit-scrollbar {
+    width: 10px;
+}
+  
+::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 6px;
+}
+  
+::-webkit-scrollbar-thumb {
+    background: #01437C;
+    border-radius: 6px; 
+    border: 3px solid transparent; 
+  }
+  
+::-webkit-scrollbar-thumb:hover {
+	transition: 0.2s;
+    background: #00AEEF; 
+  }
+  
+::-webkit-scrollbar-button {
+    background: transparent;
+  }
