--- a/src/components/pages/Articles/index.module.css
+++ b/src/components/pages/Articles/index.module.css
@@ -4,4 +4,43 @@
     padding: 120px 200px;
     align-items: end;
     gap: 40px;
+    position: relative;
+}
+.DateAuthorTime{
+    position: absolute;
+    top: 150px;
+    left: 200px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+.Source{
+    position: absolute;
+    bottom: 150px;
+    left: 200px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    max-width: 250px;
+}
+.Date, .subTitle, .title{
+    font-family: "Ubuntu", sans-serif;
+    color: #01437C;
+}
+
+.Date{
+    font-weight: 700;
+    font-size: 19px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+}
+.subTitle{
+    font-weight: 500;
+    font-size: 15px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+}
+.title{
+    font-weight: 700;
+    font-size: 20px;
 }
