Доделал видео компонент + встроил на страницу

--- a/src/components/pages/OpabVideos/index.module.css
+++ b/src/components/pages/OpabVideos/index.module.css
@@ -27,6 +27,7 @@
   height: 498px;
   margin-left: 200px;
   flex-direction: column;
+  margin-bottom: 102px;
 }
 .MainText .UpText {
   width: 1200px;
