--- a/src/components/pages/Opab/index.module.css
+++ b/src/components/pages/Opab/index.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     padding: 120px 200px;
     width: 100%;
+    overflow: hidden;
 }
 .InnerWrapper{
     display: flex;
