--- a/src/components/Carusel/index.module.css
+++ b/src/components/Carusel/index.module.css
@@ -32,3 +32,7 @@
 .ArrowLeft.Dis, .ArrowRight.Dis{
     background: url(../../assets/img/arrowhover.svg) no-repeat;
 }
+.ArrowLeft:disabled, .ArrowRight:disabled{
+    background: url(../../assets/img/arrowdisabled.svg) no-repeat;
+    background-size: cover;
+}
