--- a/src/components/Carusel/index.module.css
+++ b/src/components/Carusel/index.module.css
@@ -36,3 +36,8 @@
     background: url(../../assets/img/arrowdisabled.svg) no-repeat;
     background-size: cover;
 }
+@media only screen and (max-width: 1200px) {
+    .Wrapper{
+        overflow: scroll;
+    }
+}
