--- a/src/components/pages/Other/index.module.css
+++ b/src/components/pages/Other/index.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    padding: 120px 200px;
+    padding: 120px 15px;
     align-items: center;
 }
 .Title{
@@ -11,7 +11,7 @@
     font-size: 64px;
     color: #01437C;
     margin-bottom: 60px;
-    align-self: flex-start;
+    width: 1252px;
 }
 .PersonContainer{
     display: flex;
@@ -21,8 +21,27 @@
     flex-wrap: wrap;
     justify-content: center;
     margin-bottom: 60px;
+    width: 1252px;
+
 }
 .Button{
     width: 386px;
-height: 74px;
+    height: 74px;
+}
+@media only screen and (max-width: 1300px) {
+    .Title{
+        width: 100%;
+        align-self: self-start;
+    }
+    .PersonContainer{
+        width: 100%;
+    }
+}
+@media only screen and (max-width: 800px) {
+    .Button{
+        width: 280px;
+    }
+    .Title{
+        font-size: 42px;
+    }
 }
