--- a/src/components/FeedbackForm/index.module.css
+++ b/src/components/FeedbackForm/index.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    max-width: 1252px;
 }
 .Input{
     margin-bottom: 20px;
@@ -39,4 +40,9 @@
 .Button{
     width: 387px;
     height: 74px;
+}
+@media only screen and (max-width: 420px) {
+    .Button{
+        width: 280px;
+    }
 }
