--- a/src/components/InnerCatalog/index.module.css
+++ b/src/components/InnerCatalog/index.module.css
@@ -30,3 +30,13 @@
     gap: 20px;
     flex-wrap: wrap;
 }
+
+.Wrapper{
+    width: 1252px;
+}
+
+@media only screen and (max-width: 1300px) {
+    .Wrapper{
+        width: 100%;
+    }
+}
