--- a/src/components/pages/OpabVideos/index.module.css
+++ b/src/components/pages/OpabVideos/index.module.css
@@ -1,165 +1,94 @@
-.HeaderText {
-  width: 850px;
-  height: 186px;
-  display: flex;
-  margin-left: 200px;
-  margin-top: 136px;
-  margin-bottom: 136px;
-  flex-direction: column;
-  overflow: hidden;
-}
-.HeaderText .Text1 {
+.Wrapper{
   width: 100%;
-  height: 150px;
-  font-family: "Ubuntu", sans-serif;
-  font-weight: 700px;
-  font-size: 64px;
-  color: #01437c;
-}
-.HeaderText .Text2 {
-  font-family: "Ubuntu", sans-serif;
-  font-weight: 500px;
-  font-size: 30px;
-  color: #01437c;
-}
-.MainText {
+  padding: 150px 15px;
   display: flex;
-  width: 1200px;
-  height: 498px;
-  margin-left: 200px;
   flex-direction: column;
-  margin-bottom: 102px;
+  align-items: center;
 }
-.MainText .UpText {
-  width: 1200px;
-  height: 26px;
+.InnerWrapper{
+  width: 1000px;
+  display: flex;
+  flex-direction: column;
+}
+.Title{
   font-family: "Ubuntu", sans-serif;
   font-weight: 700;
-  font-size: 22px;
-  letter-spacing: 0.05em;
-  text-transform: uppercase;
+  font-size: 64px;
+  color: #01437c;
+  margin-bottom: 20px;
+}
+.Text1{
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 500;
+  font-size: 30px;
+  color: #01437c;
+  margin-bottom: 120px;
+}
+.Text2{
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 500;
+  font-size: 30px;
   color: #01437c;
   margin-bottom: 40px;
 }
-.MainText .ProjectAutors {
+.TextContainer{
+  width: 100%;
   display: flex;
-  width: 1200px;
-  height: 146px;
   flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 40px;
 }
-.MainText .ProjectAutors .Left {
-  width: 285px;
-  height: 22px;
+.Left{
+  width: 30%;
+}
+.Right{
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.LText{
   font-family: "Ubuntu", sans-serif;
   font-weight: 700;
   font-size: 19px;
   letter-spacing: 0.05em;
   text-transform: uppercase;
   color: #01437c;
-  gap: 20px;
 }
-.MainText .ProjectAutors .Right{
-    display: flex;
-    flex-direction: column;
+.RText{
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 300;
+  font-size: 18px;
+  color: #01437c;
 }
-.MainText .ProjectAutors .Right .Span1, .Span3{
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 300;
-    font-size: 18px;
-    color: #01437c;
-  }
-  .MainText .ProjectAutors .Right .Span2{
-    width: 666px;
-    height: 20px;
-    margin-bottom: 20px;
-  }
-  .MainText .ProjectAutors .Right .Span4{
-    width: 666px;
-    height: 20px;
-    margin-bottom: 40px;
-  }
-  .MainText .ProjectAutors .Right .Span2, .Span4{
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 400;
-    font-size: 25px;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    color: #01437c;
-  }
-.MainText .Students{
-    display: flex;
-    width: 1200px;
-    height: 128px;
-    flex-direction: row;
+.RTextBig{
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 400;
+  font-size: 25px;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: #01437c;
 }
-.MainText .Students .Left {
-    width: 285px;
-    height: 22px;
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 700;
-    font-size: 19px;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    color: #01437c;
-    gap: 20px;
-  }
-  .MainText .Students .Right{
-    width: 793px;
-    height: 128px;
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 400;
-    font-size: 25px;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    color: #01437c;
-  }
-  .MainText .TextAutors{
-    display: flex;
-    width: 1200px;
-    height: 128px;
-    flex-direction: row;
-  }
-  .MainText .TextAutors .Left {
-    width: 285px;
-    height: 22px;
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 700;
-    font-size: 19px;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    color: #01437c;
-    gap: 20px;
-  }
-  .MainText .TextAutors .Right{
-    display: flex;
-    flex-direction: column;
-    width: 793px;
-    height: 116px;
-  }
-  .MainText .TextAutors .Right .SpanR1, .SpanR3{
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 300;
-    font-size: 18px;
-    color: #01437c;
-  }
-  .MainText .TextAutors .Right .SpanR2{
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 400;
-    font-size: 25px;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    color: #01437c;
-    margin-bottom: 20px;
-  }
-    
+.Last{
+  margin-bottom: 120px;
+}
+
+
+
+
+
+
+
+
+
 .LeftNav{
   display: flex;
   width: 250px;
   flex-direction: column;
   align-items: start;
-  gap: 20px;
+  gap: 5px;
   position: fixed;
-  top: 1335px;
+  top: 50vh;
   left: 200px;
   transition: 0.2s;
 }
@@ -189,4 +118,52 @@
 
 .Section{
   position: relative;
+}
+@media only screen and (max-width: 1500px) {
+  .LeftNav{
+    left: 50px;
+  }
+}
+@media only screen and (max-width: 1100px) {
+  .LeftNav{
+    left: 0px;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .LeftNav{
+    display: none;
+  }
+  .InnerWrapper{
+    width: 100%;
+  }
+  .TextContainer{
+    flex-direction: column;
+    gap: 20px;
+  }
+  .Left{
+    width: 100%;
+  }
+  .Right{
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 550px) {
+  .Title{
+    font-size: 48px;
+  }
+}
+@media only screen and (max-width: 430px) {
+  .Title{
+    font-size: 42px;
+  }
+}
+@media only screen and (max-width: 362px) {
+  .Title{
+    font-size: 38px;
+  }
+}
+@media only screen and (max-width: 338px) {
+  .Title{
+    font-size: 32px;
+  }
 }
