--- a/src/components/pages/OpabCalendar/index.module.css
+++ b/src/components/pages/OpabCalendar/index.module.css
@@ -99,3 +99,91 @@
     width: 386px;
     height: 524px;
 }
+@media only screen and (max-width: 1300px) {
+    .Wrapper{
+        padding: 150px 150px;
+    }
+}
+@media only screen and (max-width: 1250px) {
+    .Wrapper{
+        padding: 150px 100px;
+    }
+}
+@media only screen and (max-width: 1200px) {
+    .Wrapper{
+        padding: 150px 50px;
+    }
+}
+@media only screen and (max-width: 1150px) {
+    .Wrapper{
+        padding: 150px 15px;
+    }
+}
+@media only screen and (max-width: 1024px) {
+    .Photo1{
+        width: 60%;
+        height: auto;
+        aspect-ratio: 0.78;
+    }
+    .Photo2{
+        width: 80%;
+        height: auto;
+        aspect-ratio: 1.39;
+    }
+    .Photo3{
+        width: 80%;
+        height: auto;
+        aspect-ratio: 1.83;
+    }
+    .Photo4{
+        width: 80%;
+        height: auto;
+        aspect-ratio: 1.4;
+    }
+    .Photo5{
+        width: 80%;
+        height: auto;
+        aspect-ratio: 1.4;
+    }
+    .Photo6{
+        width: 80%;
+        height: auto;
+        aspect-ratio: 1.4;
+    }
+    .Photo7{
+        width: 80%;
+        height: auto;
+        aspect-ratio: 1.4;
+    }
+    .Photo8{
+        width: 80%;
+        height: auto;
+        aspect-ratio: 1.4;
+    }
+    .Photo9{
+        width: 80%;
+        height: auto;
+        aspect-ratio: 0.73;
+    }
+}
+@media only screen and (max-width: 640px) {
+    .CalendarRight{
+        width: 0;
+    }
+    .CalendarLeft{
+        width: calc(100% - 20px);
+    }
+}
+@media only screen and (max-width: 514px) {
+    .SourceText{
+        max-width: 100%;
+    }
+    .Source{
+        max-width: 100%;
+    }
+}
+@media only screen and (max-width: 370px) {
+    .Title{
+        font-size: 48px;
+    }
+}
