--- a/src/components/pages/NotFound/index.module.css
+++ b/src/components/pages/NotFound/index.module.css
@@ -4,6 +4,7 @@
     align-items: center;
     gap: 20px;
     margin-top: 120px;
+    padding: 15px;
 }
 .E404{
     font-family: "Ubuntu", sans-serif;
@@ -22,4 +23,17 @@
 .Button{
     width: 386px;
     height: 74px;
+}
+
+@media only screen and (max-width: 400px) {
+  .Button{
+    width: 100%;
+  }
+  .E404Text{
+    font-size: 28px;
+    padding-bottom: 0px;
+  }
+  .E404{
+    font-size: 100px;
+  }
 }
