--- a/src/components/ui/ArticlePhoto/index.module.css
+++ b/src/components/ui/ArticlePhoto/index.module.css
@@ -7,3 +7,10 @@
     width: 100%;
     height: 100%;
 }
+@media only screen and (max-width: 1200px) {
+    .Wrapper{
+        width: 100%;
+        aspect-ratio: 1.5;
+        height: auto;
+    }
+}
