--- a/src/components/ui/ArticlePhotoAndCaption/index.module.css
+++ b/src/components/ui/ArticlePhotoAndCaption/index.module.css
@@ -15,3 +15,14 @@
     font-weight: 300;
     font-size: 12px;
 }
+@media only screen and (max-width: 1200px) {
+    .Wrapper{
+        width: 100%;
+        height: auto;
+    }
+    .Photo{
+        width: 100%;
+        aspect-ratio: 1.5;
+        height: auto;
+    }
+}
