--- a/src/components/ui/ArticlePhotoCarousel/index.module.css
+++ b/src/components/ui/ArticlePhotoCarousel/index.module.css
@@ -49,3 +49,13 @@
     background: url(../../../assets/img/arrowdisabled.svg) no-repeat;
     background-size: cover;
 }
+@media only screen and (max-width: 1200px) {
+    .Wrapper{
+        width: 100%;
+    }
+    .Photo{
+        width: 100%;
+        aspect-ratio: 1.5;
+        height: auto;
+    }
+}
