--- a/src/components/ui/ArticleQuote/index.module.css
+++ b/src/components/ui/ArticleQuote/index.module.css
@@ -15,3 +15,18 @@
     line-height: 150%;
     letter-spacing: 0.03em;
 }
+@media only screen and (max-width: 1200px) {
+    .Wrapper{
+        width: 100%;
+    }
+}
+@media only screen and (max-width: 800px) {
+    .text{
+        font-size: 15px;
+    }
+}
+@media only screen and (max-width: 420px) {
+    .text{
+        font-size: 12px;
+    }
+}
