--- a/src/components/ui/ArticleSubtitle/index.module.css
+++ b/src/components/ui/ArticleSubtitle/index.module.css
@@ -16,3 +16,19 @@
     letter-spacing: 0.05em;
     text-transform: uppercase;
 }
+@media only screen and (max-width: 1200px) {
+    .Wrapper{
+        width: 100%;
+    }
+}
+        
+@media only screen and (max-width: 800px) {
+    .text{
+        font-size: 18px;
+    }
+}
+@media only screen and (max-width: 420px) {
+    .text{
+        font-size: 14px;
+    }
+}
